Fix tel links (#170)
* add responsiveness to contact section

* add right marquee data for design hero section

* fix top position for mobile on home page

* fix mobile view for home page

* fix marquee gap on home page

* fix home page from being off centered on mobile view

* fix tel links

--- a/src/features/layout/privacy-terms/privacyTerms.module.scss
+++ b/src/features/layout/privacy-terms/privacyTerms.module.scss
@@ -53,13 +53,6 @@
         font-size: 3.25rem;
         line-height: 120%;
       }
-
-      .homeButton {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 0.5rem;
-      }
     }
 
     .section {
